[package]
name = "actix-juniper-diesel"
version = "1.0.0"
authors = ["Medga <hamed.gaeini@gmail.com>"]
edition = "2018"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
actix-web="3"
dotenv = "0"
chrono = "0"
    validator = { version = "0.12", features = ["derive"] }

#log
env_logger = "0"
log = "0"

# graphql
juniper="0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# database
diesel = { version = "1", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1"